cmake_minimum_required(VERSION 3.8)
project(window_racer)

set(CMAKE_CXX_STANDARD 17)

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
add_executable(window_racer window_racer.cpp event.cpp)
set_source_files_properties(window_racer.cpp PROPERTIES COMPILE_OPTIONS "-g;-Wno-unused-parameter;-Wno-missing-field-initializer")
if(EXECUTE_MODEL STREQUAL "TEST_1")
    target_compile_definitions(window_racer PRIVATE "EXECUTE_MODEL_TEST_1")
    message(STATUS "using TEST_1 model")
elseif(EXECUTE_MODEL STREQUAL "TEST_2")
    target_compile_definitions(window_racer PRIVATE "EXECUTE_MODEL_TEST_2")
    message(FATAL_ERROR "TEST_2 not yet implemented")
elseif(EXECUTE_MODEL STREQUAL "PHOLD")
    target_compile_definitions(window_racer PRIVATE "EXECUTE_MODEL_PHOLD")
    message(STATUS "using PHOLD")
else()
    message(FATAL_ERROR "EXECUTE_MODEL is not properly defined")
endif()


if(NOT DEFINED ENV{LIB_INCDIR})
    message(FATAL_ERROR "Environment variable LIB_INCDIR is not set!")
endif()
target_include_directories(window_racer PRIVATE $ENV{LIB_INCDIR})
target_link_libraries(window_racer PRIVATE Threads::Threads)
